// 通用协议结构
syntax = "proto3";

option java_package = "org.wyf.game.proto.struct";

message PbTask {
  int32 id = 1;
  int64 progress = 2;
  bool isFinished = 3;
  bool isReward = 4;
}

message PbTaskArrays {
  repeated PbTask tasks = 1;
}